--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webstudio</title>
 </head>
 <body>
 <header>
@@ -29,7 +29,7 @@
         <button type="button">Order Service</button>
     </section>
     <section>
-        <h2 hidden>secondsection</h2>
+        <h2>Advantages</h2>
     <ul>
         <li>
             <h3>Strategy</h3>
@@ -81,6 +81,53 @@
                 alt="Daniel UI">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2> Our Portfolio</h2>
+        <ul>
+            <li>
+                <img src="./images/img-bankingapp.jpg"
+                width="360" height="300"
+                alt="bankapp">
+                <h3>Banking App</h3>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/img-cashpayment.jpg"
+                width="360" height="300"
+                alt="cashp">
+                    <h3>Cashless Payment</h3>
+                        <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img-mediapp.jpg"
+                width="360" height="300"
+                alt="medi">
+                    <h3>Meditation App</h3>
+                        <p>App</p>
+            </li>
+            <li>
+                <img src="./images/img-taxiservice.jpg"
+                width="360" height="300"
+                alt="taxi">
+                    <h3>Taxi Service</h3>
+                        <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img-scrillustrations.jpg"
+                width="360" height="300"
+                alt="screenill">
+                    <h3>Screen Illustrations</h3>
+                        <p>Design</p>
+            </li>
+            <li>
+                <img src="./images/img-onlinecourses.jpg"
+                width="360" height="300"
+                alt="onlinec">
+                    <h3>Online Courses</h3>
+                        <p>Marketing</p>
             </li>
         </ul>
     </section>
