--- a/index.html
+++ b/index.html
@@ -4,137 +4,148 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <header>
     <nav>
-<a href="./index.html">WebStudio</a>
-<ul>
-    <li><a href="">Studio</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Contacts</a></li>
+<a class="webstudio"
+href="./index.html"><span class="web-color">WEB</span>STUDIO</a>
+<ul class="head-title">
+    <li class="head-nav"><a href="">Studio</a></li>
+    <li class="head-nav"><a href="">Portfolio</a></li>
+    <li class="head-nav"><a href="">Contacts</a></li>
 </ul>
     </nav>
     <address>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <ul class="head-title">
+        <li class="head-contact"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="head-contact"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
     </address>
 </header>
 <main>
-    <section>
-        <h1>Effective Solutions
+    <section class="order">
+        <h1 class="order-title">Effective Solutions
         for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="order-btn" type="button">Order Service</button>
     </section>
-    <section>
+    <section class="advg">
         <h2>Advantages</h2>
     <ul>
         <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business
+            <h3 class="advg-title">Strategy</h3>
+            <p class="advg-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
         </li>
         <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <h3 class="advg-title">Punctuality</h3>
+            <p class="advg-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <h3 class="advg-title">Diligence</h3>
+            <p class="advg-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <h3 class="advg-title">Technologies</h3>
+            <p class="advg-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
     </ul> 
     </section>
 
     <section>
-        <h2>Our Team</h2>
+        <h2 class="workers-title">Our Team</h2>
         <ul>
             <li>
                 <img src="./images/img-mark.jpg" 
                  width="264" height="260"
                 alt="Mark ProductD">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="workers-name">Mark Guerrero</h3>
+                <p class="workers-position">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img-ford.jpg" 
                  width="264" height="260"
                 alt="Tom FrontendD">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="workers-name">Tom Ford</h3>
+                <p class="workers-position">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img-camila.jpg" 
                  width="264" height="260"
                 alt="Camila Marketing">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="workers-name">Camila Garcia</h3>
+                <p class="workers-position">Marketing</p>
             </li>
             <li>
                 <img src="./images/img-daniel.jpg" 
                  width="264" height="260"
                 alt="Daniel UI">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="workers-name">Daniel Wilson</h3>
+                <p class="workers-position">UI Designer</p>
             </li>
         </ul>
     </section>
     <section>
-        <h2> Our Portfolio</h2>
+        <h2 class="portf-title"> Our Portfolio</h2>
         <ul>
             <li>
                 <img src="./images/img-bankingapp.jpg"
                 width="360" height="300"
                 alt="bankapp">
-                <h3>Banking App</h3>
-                <p>App</p>
+                <h3 class="portf-name">Banking App</h3>
+                <p class="portf-text">App</p>
             </li>
             <li>
                 <img src="./images/img-cashpayment.jpg"
                 width="360" height="300"
                 alt="cashp">
-                    <h3>Cashless Payment</h3>
-                        <p>Marketing</p>
+                    <h3 class="portf-name">Cashless Payment</h3>
+                        <p class="portf-text">Marketing</p>
             </li>
             <li>
                 <img src="./images/img-mediapp.jpg"
                 width="360" height="300"
                 alt="medi">
-                    <h3>Meditation App</h3>
-                        <p>App</p>
+                    <h3 class="portf-name">Meditation App</h3>
+                        <p class="portf-text">App</p>
             </li>
             <li>
                 <img src="./images/img-taxiservice.jpg"
                 width="360" height="300"
                 alt="taxi">
-                    <h3>Taxi Service</h3>
-                        <p>Marketing</p>
+                    <h3 class="portf-name">Taxi Service</h3>
+                        <p class="portf-text">Marketing</p>
             </li>
             <li>
                 <img src="./images/img-scrillustrations.jpg"
                 width="360" height="300"
                 alt="screenill">
-                    <h3>Screen Illustrations</h3>
-                        <p>Design</p>
+                    <h3 class="portf-name">Screen Illustrations</h3>
+                        <p class="portf-text">Design</p>
             </li>
             <li>
                 <img src="./images/img-onlinecourses.jpg"
                 width="360" height="300"
                 alt="onlinec">
-                    <h3>Online Courses</h3>
-                        <p>Marketing</p>
+                    <h3 class="portf-name">Online Courses</h3>
+                        <p class="portf-text">Marketing</p>
             </li>
         </ul>
     </section>
 </main>
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <P>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</P>
+<footer class="footer">
+    <a class="webstudio-two"
+    href="./index.html"><span class="web-color">WEB</span>STUDIO</a>
+    <P class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</P>
 </footer>
 </body> 
 </html>
