--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 </head>
 <body>
 <header>
-    <nav>
+    <nav class="hpage">
 <a class="webstudio"
-href="./index.html"><span class="web-color">WEB</span>STUDIO</a>
+href="./index.html">WEB<span class="web-color">STUDIO</span></a>
 <ul class="head-title">
-    <li class="head-nav"><a href="">Studio</a></li>
+    <li class="head-nav"><a href="./index.html">Studio</a></li>
     <li class="head-nav"><a href="">Portfolio</a></li>
     <li class="head-nav"><a href="">Contacts</a></li>
 </ul>
     </nav>
-    <address>
+    <address class="head-address">
     <ul class="head-title">
         <li class="head-contact"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li class="head-contact"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -61,9 +61,9 @@ href="./index.html"><span class="web-color">WEB</span>STUDIO</a>
     </ul> 
     </section>
 
-    <section>
+    <section class="workers">
         <h2 class="workers-title">Our Team</h2>
-        <ul>
+        <ul class="workers-list">
             <li>
                 <img src="./images/img-mark.jpg" 
                  width="264" height="260"
@@ -144,7 +144,7 @@ href="./index.html"><span class="web-color">WEB</span>STUDIO</a>
 </main>
 <footer class="footer">
     <a class="webstudio-two"
-    href="./index.html"><span class="web-color">WEB</span>STUDIO</a>
+    href="./index.html"><span class="web-color-two">WEB</span>STUDIO</a>
     <P class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</P>
 </footer>
 </body> 
