--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-<header>
+<header class="head-address">
     <nav class="hpage">
 <a class="webstudio"
-href="./index.html">WEB<span class="web-color">STUDIO</span></a>
+href="./index.html">web<span class="web-color">Studio</span></a>
 <ul class="head-title">
     <li class="head-nav"><a href="./index.html">Studio</a></li>
     <li class="head-nav"><a href="">Portfolio</a></li>
     <li class="head-nav"><a href="">Contacts</a></li>
-</ul>
+</ul class="head-title">
     </nav>
     <address class="head-address">
     <ul class="head-title">
@@ -64,28 +64,28 @@ href="./index.html">WEB<span class="web-color">STUDIO</span></a>
     <section class="workers">
         <h2 class="workers-title">Our Team</h2>
         <ul class="workers-list">
-            <li>
+            <li class="workers-inform">
                 <img src="./images/img-mark.jpg" 
                  width="264" height="260"
                 alt="Mark ProductD">
                 <h3 class="workers-name">Mark Guerrero</h3>
                 <p class="workers-position">Product Designer</p>
             </li>
-            <li>
+            <li class="workers-inform">
                 <img src="./images/img-ford.jpg" 
                  width="264" height="260"
                 alt="Tom FrontendD">
                 <h3 class="workers-name">Tom Ford</h3>
                 <p class="workers-position">Frontend Developer</p>
             </li>
-            <li>
+            <li class="workers-inform">
                 <img src="./images/img-camila.jpg" 
                  width="264" height="260"
                 alt="Camila Marketing">
                 <h3 class="workers-name">Camila Garcia</h3>
                 <p class="workers-position">Marketing</p>
             </li>
-            <li>
+            <li class="workers-inform">
                 <img src="./images/img-daniel.jpg" 
                  width="264" height="260"
                 alt="Daniel UI">
@@ -144,7 +144,7 @@ href="./index.html">WEB<span class="web-color">STUDIO</span></a>
 </main>
 <footer class="footer">
     <a class="webstudio-two"
-    href="./index.html"><span class="web-color-two">WEB</span>STUDIO</a>
+    href="./index.html">web<span class="web-color-two">Studio</span></a>
     <P class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</P>
 </footer>
 </body> 
