--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <a class="webstudio"
 href="./index.html">web<span class="web-color">Studio</span></a>
 <ul class="head-title">
-    <li class="head-nav"><a href="./index.html">Studio</a></li>
-    <li class="head-nav"><a href="">Portfolio</a></li>
-    <li class="head-nav"><a href="">Contacts</a></li>
+    <li><a class="head-nav" href="./index.html">Studio</a></li>
+    <li><a class="head-nav" href="">Portfolio</a></li>
+    <li><a class="head-nav" href="">Contacts</a></li>
 </ul>
     </nav>
     <address class="head-address">
     <ul class="head-title">
-        <li class="head-contact"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="head-contact"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li><a class="head-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="head-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
     </address>
 </header>
